[gd_scene load_steps=3 format=3 uid="uid://ct2rh6q7ees63"]

[ext_resource type="Script" path="res://scripts/client.gd" id="1_dvy2v"]
[ext_resource type="Script" path="res://scripts/Control.gd" id="2_xekt2"]

[node name="Node" type="Node"]
script = ExtResource("1_dvy2v")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_xekt2")

[node name="Panel" type="Panel" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Control/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="RichTextLabel" type="RichTextLabel" parent="Control/Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
bbcode_enabled = true
scroll_following = true
tab_size = 24
text_direction = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Control/Panel/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="LineEdit" type="LineEdit" parent="Control/Panel/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Button" type="Button" parent="Control/Panel/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
text = "^"

[connection signal="receive_str" from="." to="Control" method="_on_node_receive_str"]
[connection signal="text_submitted" from="Control/Panel/VBoxContainer/HBoxContainer/LineEdit" to="." method="_on_line_edit_text_submitted"]
[connection signal="text_submitted" from="Control/Panel/VBoxContainer/HBoxContainer/LineEdit" to="Control" method="_on_line_edit_text_submitted"]
[connection signal="button_up" from="Control/Panel/VBoxContainer/HBoxContainer/Button" to="." method="_on_button_button_up"]
[connection signal="button_up" from="Control/Panel/VBoxContainer/HBoxContainer/Button" to="Control" method="_on_button_button_up"]
